--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ body {
 
 a {
     text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
     color: var(--color-black);
 }
 
@@ -91,6 +95,13 @@ p {
 }
 
 /* Header */
+.site__logo {
+    font-size: var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+    color: var(--color-white) !important;
+    padding: 16px;
+}
+
 header {
     background-image: url("imgs/main.jpg");
     background-repeat: no-repeat;
@@ -162,26 +173,20 @@ header {
 
 /* Navbar */
 #navbar {
-    position: absolute;
+    position: relative;
     width: 1871px;
     height: 40px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: var(--color-blue);
     align-items: center;
     color: var(--color-white);
     padding: 16px;
     transition: all var(--animation-duration) ease-in-out;
-    z-index: 1;
 }
 
 .navbar__menu {
     display: flex;
-}
-
-.navbar__logo {
-    font-size: var(--font-medium);
-    font-weight: var(--weight-semi-bold);
 }
 
 .navbar__menu__item {
@@ -190,6 +195,8 @@ header {
     padding: 8px 12px;
     margin: auto;
     cursor: pointer;
+    font-weight: var(--weight-bold);
+    font-size: var(--font-regular);
     border: 1px solid transparent;
     border-radius: var(--size-border-radius);
 }
@@ -207,4 +214,47 @@ header {
     font-size: 24px;
     color: var(--color-white);
     display: none;
+}
+
+/* Jeju Trip */
+.jeju__intro {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.jeju__li {
+    margin: 20px;
+    padding: 0;
+    border: 0;
+    font: inherit;
+}
+.jeju__img {
+    display: flex;
+    justify-content:center;
+
+}
+
+.thumbnail {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    align-items: flex-start;
+}
+
+.thumbnail:hover {
+    box-shadow: 4px 4px #ddd;
+}
+
+.bn-tit {
+    max-width: 205px;
+    text-align: center;
+    font-size: var(--font-micro);
+}
+
+.bn-price {
+    padding-top: 20px;
+    max-width: 200px;
+    text-align: center;
+    font-size: var(--font-small);
+    align-content: end;
 }
