--- a/style.css
+++ b/style.css
@@ -62,7 +62,9 @@ button {
     outline: none;
 }
 
-input[type="button"]{font-family: "FontAwesome";}
+input[type="button"] {
+    font-family: "FontAwesome";
+}
 
 /* Typography */
 
@@ -108,17 +110,18 @@ header {
     background-size: cover;
     width: 1903px;
     height: 740px;
-    }
+}
 
 .main__intro {
     display: flex;
     text-align: left;
-    max-width:1500px;
+    max-width: 1500px;
     font-weight: var(--weight-bold);
     letter-spacing: -0.1em;
     padding: 100px 300px;
-    
+
 }
+
 .main__searchBtn {
     display: inline-block;
     position: absolute;
@@ -130,6 +133,7 @@ header {
     border: 0;
     outline: 0;
 }
+
 .vs_search {
     position: relative;
     width: 246px;
@@ -139,6 +143,7 @@ header {
     border-radius: 26px;
     margin-top: 30px;
 }
+
 .main__search {
     width: 220px;
     height: 30px;
@@ -147,7 +152,7 @@ header {
     font-weight: var(--weight-bold);
     line-height: 30px;
     border: none;
-    
+
 }
 
 .city_1st {
@@ -158,6 +163,7 @@ header {
     margin-top: 25px;
     margin-left: 100px;
 }
+
 
 .img_bg {
     display: block;
@@ -228,9 +234,10 @@ header {
     border: 0;
     font: inherit;
 }
+
 .jeju__img {
     display: flex;
-    justify-content:center;
+    justify-content: center;
 
 }
 
@@ -257,4 +264,122 @@ header {
     text-align: center;
     font-size: var(--font-small);
     align-content: end;
+}
+
+.mySlides {
+    display: none
+}
+
+img {
+    vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+
+    .prev,
+    .next,
+    .text {
+        font-size: 11px
+    }
 }
